--- a/index.html
+++ b/index.html
@@ -9,15 +9,61 @@
 	<title>VIDii 2023/24 - Tijdlijn</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/png+xml" href="images/favicon.png">
+	<link rel="icon" type="image/png+xml" href="./images/soccerball.png">
 </head>
 
 <body>
-	<h1>Howdy I&I</h1>
+	<section>
+		<img src="./images/logo.png" alt="">
+		<button>Klik hier om te starten</button>
+	</section>
 
+	<section>
+		<h1>Schiet de bal door op de knop te drukken of door de bal in de goal te slepen</h1>
 
+		<ul id="goal"> </ul>
 
-	<script src="scripts/script.js"></script>
+		<img src="./images/Mark_Evans.webp" alt="Mark Evans">
+		<img src="" alt="">
+		<img src="" alt="">
+		<img src="" alt="">
+
+		<ul id="ball">
+			<li><img src="./images/soccerball.png" alt="Soccer Bal"></li>
+		</ul>
+
+		<button>Schiet de bal</button>
+
+		<ul id="eastereggs"> </ul>
+	</section>
+
+	<section>
+		<h2>Informatie Techniek</h2>
+		<p></p>
+		<p></p>
+		<p></p>
+	</section>
+
+	<audio src="./audio/intro.mp3"></audio>
+
+	<!-- library van de drag en drop funtie -->
+	<script defer src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+
+	<!-- mijn javascript -->
+	<script defer src="scripts/script.js"></script>
 </body>
 	
 </html>
+
+<!-- BRONNEN
+1. Sanne (docent)
+2. Sjors van Holst
+3. Studentenassistente
+4. Steven Wan
+5. Ruben van Vliet
+6. Sam Lansdaal
+7. https://developer.mozilla.org/en-US/
+8. https://www.w3schools.com/jsref/met_win_settimeout.asp
+9. http://sortablejs.github.io/Sortable/#simple-list
+10. 
+-->
